<?xml version="1.0"?>
<package>
  <name>zbar_ros</name>
  <version>0.0.5</version>
  <description>Lightweight ROS wrapper for Zbar barcode/qrcode reader library (http://zbar.sourceforge
    .net/)</description>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>zbar</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>zbar</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>